# customwm

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  IDEAS.md  Makefile  README.md  THEME  THEME.md  TODO.md  config.mk  customwm.supp  dist.sh  makedist.sh  sample.lua  temp  test-theme.lua
.github/workflows/: .github-actions-build.yml  .github-actions-release.yml
.old/: Makefile
.old/common/: init.cc  init.hh  logger.cc
.old/customwm/: main.cc
.old/doc/: classes.puml
.old/graphics/: focusmanager.cc  grabmanager.cc  grabmanager.hh  graphics.cc  graphics.hh  gwindow.cc  gwindow.hh  gwm.cc  gwm.hh  resources.hh
.old/graphics/x11/: x.cc  x.hh  xresources.cc  xresources.hh  xwindow.cc  xwindow.hh  xwm.cc  xwm.hh
.old/libresource/: colors.hh  resourcemanager.hh
.old/libtheme/: exceptions.hh  luaw.hh  theme.cc
.old/libtheme/types/: iwindow.cc  resources.cc  types.hh
.old/scripts/: base-theme.lua  inspect.lua  theme-utils.lua
.old/wm/: main.cc
.old2/customwm/: customwm.hh  customwm.lua
.old2/libengine/: engine.hh  engine.inl  exceptions.hh  luaw.cc
.old2/libengine/helper/: helper.hh  helper.lua
.old2/libengine/types/: types.cc  types.hh
.old2/libroot/: root.cc  root.hh
.old2/libroot/wayland/: output.cc  output.hh  root_wayland.cc  server_wayland.cc
.old2/libroot/x11/: server_x11.cc
_old/lib/: exceptions.hh  theme.cc  theme.hh  theme.inl  themefile.cc  themefile.hh
_old/lib/types/: ibrush.hh  iwindow.hh
_old/themes/: default.customvm_theme
_old/wm/: main.cc
_old/wm/x11/: brush.hh  x11.hh
common/: base_theme.lua  init.cc  init.hh  logger.cc  options.cc
contrib/: stb_image.h
customwm/: Makefile.x11  customwm.lua  main.cc  options.cc  options.hh  windowmanager.cc  windowmanager.hh
customwm/config/: config.cc  config.hh
doc/: classes.puml
graphics/: Makefile.x11  cursors.hh  event.hh  focusmanager.cc  focusmanager.hh  grabmanager.cc  grabmanager.hh  graphics.cc  graphics.hh  gwindow.cc  gwindow.hh  gwm.cc  gwm.hh  resources.hh  whandle.hh  windowhandle.hh  wm.cc  wm.hh  wm_window.hh
graphics/dummy/: dgraphics.hh
graphics/pencil/: pencil.hh
graphics/pencil/opengl/: openglmanager.cc  openglmanager.hh  openglpencil.cc  openglpencil.hh  shaders.hh
graphics/pencil/opengl/programs/: fillprogram.cc  fillprogram.hh  program.cc  program.hh
graphics/pencil/xlib/: xlibpencil.cc  xlibpencil.hh
graphics/wayland/: waylandgraphics.cc  waylandgraphics.hh
graphics/x11/: graphics_x11.cc  graphics_x11.hh  graphicsx11.cc  graphicsx11.hh  resources.cc  resources.hh  resourcesx11.cc  resourcesx11.hh  windowx11.cc  windowx11.hh  wm.cc  wm.hh  wm_x11.cc  wm_x11.hh  wmwindow.cc  wmwindow.hh  wmx11.cc  wmx11.hh  x.cc  x.hh  x11.cc  x11.hh  xgraphics.cc  xgraphics.hh  xresources.cc  xresources.hh  xwindow.cc  xwindow.hh  xwm.cc  xwm.hh
graphics/x11/gl/: xglgraphics.cc  xglgraphics.hh  xopenglgraphics.cc  xopenglgraphics.hh
graphics/x11/xlib/: xlibgraphics.cc  xlibgraphics.hh
lib/: customwmlib.cc  customwmlib.hh  exceptions.hh  luaw.cc  luaw.hh  theme.cc  theme.hh  theme.inl  types.hh  window.hh
lib/types/: Iwindow.cc  ibrush.cc  ibrush.hh  types.cc  types.hh  window.cc  window.hh
libengine/: engine.cc  engine.hh  engine.inl  helper.lua  luaw.hh  luaw.inl  metatables.cc  metatables.hh
libengine/types/: types.cc
libresource/: colors.cc  resourcemanager.cc  resourcemanager.hh
libroot/: eventlistener.hh  root.cc  root.hh  server.hh
libroot/wayland/: output.cc  output.hh  root_wayland.cc  root_wayland.hh  rootwayland.cc  rootwayland.hh  server_wayland.cc  server_wayland.hh
libroot/x11/: root_x11.cc  root_x11.hh  server_x11.cc  server_x11.hh  wm_x11.cc  wm_x11.hh
libtheme/: exceptions.hh  luaw.cc  luaw.hh  luaw.inl  theme.cc  theme.hh  theme.inl
libtheme/base/: base.lua
libtheme/types/: TWindow.hh  datafile.cc  datafile.hh  interfaces.cc  interfaces.hh  iwindow.cc  iwindow.hh  resource.cc  resource.hh  resources.cc  twindow.cc  twindow.hh  types.cc  types.hh
old/: CMakeLists.txt  TODO.md  config.cc  wm.cc  wm.hh
old/libresource/: resourcemanager.cc
old/libtheme/: luaw.hh
old/libtheme/types/: resources.hh  types.cc
old/wm/: window.cc  window.hh  wm.cc
options/: options.cc  options.hh
scripts/: base-theme.lua  base_theme.lua  themehelper.lua
theme/: Makefile  logger.cc  logger.hh  theme-helper.lua  theme.cc  theme.hh  theme.inl  themeexception.hh  themehelper.lua
theme/scripts/: base-theme.lua  inspect.lua  theme-utils.lua
theme/test/: test.cc
theme/types/: exceptions.hh  l_window.cc  l_window.hh  l_wm.cc  l_wm.hh  lwindow.cc  lwindow.hh  lwm.cc  lwm.hh  types.cc  types.hh
themes/: default.customvm_theme
util/: init.cc  log.cc  log.hh  options.cc
window/: parentwindow.cc  parentwindow.hh  window.cc  window.hh
windowmanager/: events.cc  events.hh  parentwindow.cc  parentwindow.hh  windowmanager.cc  windowmanager.hh  wmevents.cc  wmevents.hh
wm/: config.hh  main.cc  options.cc  options.hh  resources.cc  resources.hh  types.hh  window.cc  window.hh  windows.cc  windows.hh  wm.cc  wm.hh  wm_x11.cc  wm_x11.hh  wm_x_11.cc  wm_x_11.hh
wm/base/: base.lua
wm/graphlib/: graphiclibrary.hh  graphx11.cc  graphx11.hh
wm/wm/: ievents.hh  window.hh  windows.cc  windows.hh  wm.cc  wm.hh  wm_events.hh  wmtypes.hh
wm/x11/: brush.cc  brush.hh  x11.cc  x11.hh
